--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Pillow==8.0.1
 protobuf==3.14.0
 PyYAML==5.3.1
 scipy==1.5.4
+scikit-learn-0.19.2
 six==1.15.0
 tensorboard==1.14.0
 tensorflow-estimator==1.14.0
@@ -25,4 +26,6 @@ termcolor==1.1.0
 typing-extensions==3.7.4.3
 Werkzeug==1.0.1
 wrapt==1.12.1
+pytorch==1.6.0
+torchvision==0.7.0
 zipp==3.4.0
